# devlog-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.lock.txt
.github/workflows/: lint.yml  tests.yml
src/devlog/: cli.py  models.py  storage.py
src/devlog/commands/: add.py  export.py  search.py  stats.py  today.py
tests/: conftest.py  test_commands.py  test_models.py  test_storage.py
