[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata (PEP 621)
# ---------------------------------------------------------------------------
[project]
name = "devlog-cli"
version = "0.1.0"
description = "A CLI tool to keep a developer journal from your terminal"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "eliolot" }]
requires-python = ">=3.13"
keywords = ["cli", "developer", "journal", "productivity", "devlog"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]

# Production dependencies - installed with the package
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "rich>=13.7",
]

# Entry point: after `pip install devlog-cli`, the `devlog` command will be available in the terminal
[project.scripts]
devlog = "devlog.cli:app"

[project.urls]
Homepage = "https://github.com/eliolot/devlog-cli"
Repository = "https://github.com/eliolot/devlog-cli"
"Bug Tracker" = "https://github.com/eliolot/devlog-cli/issues"

# ---------------------------------------------------------------------------
# Development dependencies (not installed with the package)
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.4",
  "pre-commit>=3.7",
]

# ---------------------------------------------------------------------------
# Configuration Hatchling (build backend)
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/devlog"]

# ---------------------------------------------------------------------------
# Configuration Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "B",   # flake8-bugbear (common bugs)
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade (modern syntax suggestions)
]
ignore = [
  "E501", # line too long — handled by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["devlog"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Configuration Mypy (type checker)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

# ---------------------------------------------------------------------------
# Configuration Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=devlog --cov-report=term-missing --cov-report=html"
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# Configuration Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/devlog"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
